name:                post
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jez/flac-post-tag#readme
license:             MIT
license-file:        LICENSE
author:              Jake Zimmerman
maintainer:          zimmerman.jake@gmail.com
copyright:           2016 Jake Zimmerman
category:            Math

build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TagSystem
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable post-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , post
                     , docopt
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jez/flac-post-tag
